--- a/entradas/inscripcion.html
+++ b/entradas/inscripcion.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,18 +54,23 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./inscripcion.html">Entradas</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Entradas</span>
           </div>
         </div>
+        <!-- FORM -->
         <div class="form">
           <form
             id="form"
@@ -132,6 +136,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -160,6 +165,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
