--- a/horarios/horarios.html
+++ b/horarios/horarios.html
@@ -15,8 +15,7 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    <!-- HEADER -->
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
@@ -55,13 +54,17 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./horarios.html">Horarios</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Horarios</span>
@@ -78,7 +81,7 @@
             </button>
           </div>
 
-          <!-- DIA 1-->
+          <!-- TABLE DAY 1 -->
           <div class="tabPanel">
             <div class="table-body">
               <table>
@@ -208,9 +211,9 @@
               </table>
             </div>
           </div>
-          <!-- FIN DIA 1-->
+          <!-- END DAY 1 -->
 
-          <!-- DIA 2-->
+          <!-- TABLE DAY 2 -->
           <div class="tabPanel">
             <div class="table-body">
               <table>
@@ -346,9 +349,9 @@
               </table>
             </div>
           </div>
-          <!-- FIN DIA 1-->
+          <!-- END DAY 2 -->
 
-          <!-- DIA 3-->
+          <!-- TABLE DAY 3 -->
           <div class="tabPanel">
             <div class="table-body">
               <table>
@@ -469,13 +472,14 @@
               </table>
             </div>
           </div>
-          <!-- FIN DIA 3-->
+          <!-- END DAY 3 -->
         </div>
       </div>
     </main>
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -504,6 +508,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
