--- a/informacion/footer/concursos.html
+++ b/informacion/footer/concursos.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,19 +54,24 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./concursos.html">Concursos</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Concursos</span>
           </div>
         </div>
         <div class="content">
+          <!-- ACCORDION 1 -->
           <button class="accordion">
             Asian Cover Dance
           </button>
@@ -190,11 +194,12 @@
               </li>
             </ul>
           </div>
-
+          <!-- ACCORDION 2 -->
           <button class="accordion">
             Pop Culture Hiroshima
           </button>
           <div class="panel">
+            <!-- ACCORDION 2-1 -->
             <button class="accordion2">
               General
             </button>
@@ -335,6 +340,7 @@
                 </li>
               </ul>
             </div>
+            <!-- ACCORDION 2-2 -->
             <button class="accordion2">
               Jurado
             </button>
@@ -373,6 +379,7 @@
                 </li>
               </ul>
             </div>
+            <!-- ACCORDION 2-3 -->
             <button class="accordion2">
               Criterios de evaluación
             </button>
@@ -386,6 +393,7 @@
                   norma número 5.
                 </li>
               </ul>
+              <!-- ACCORDION 2-3.1 -->
               <button class="accordion1">
                 Confección
               </button>
@@ -434,6 +442,7 @@
                   </li>
                 </ul>
               </div>
+              <!-- ACCORDION 2-3.2 -->
               <button class="accordion1">
                 Actuación e Interpretación
               </button>
@@ -496,10 +505,12 @@
               </div>
             </div>
           </div>
+          <!-- ACCORDION 3 -->
           <button class="accordion">
             Karaoke
           </button>
           <div class="panel">
+            <!-- ACCORDION 3-1 -->
             <button class="accordion2">
               Inscripción
             </button>
@@ -522,6 +533,7 @@
                 </li>
               </ul>
             </div>
+            <!-- ACCORDION 3-2 -->
             <button class="accordion2">
               Participación
             </button>
@@ -555,6 +567,7 @@
                 </li>
               </ul>
             </div>
+            <!-- ACCORDION 3-3 -->
             <button class="accordion2">
               Interpretación
             </button>
@@ -582,6 +595,7 @@
                 </li>
               </ul>
             </div>
+            <!-- ACCORDION 3-4 -->
             <button class="accordion2">
               Jurado y premios
             </button>
@@ -614,6 +628,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -638,6 +653,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETOWRK -->
         <div class="contacto">
           <div class="contactos">
             <img
