--- a/informacion/footer/politica.html
+++ b/informacion/footer/politica.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,19 +54,24 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./politica.html">Política</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Política</span>
           </div>
         </div>
         <div class="content">
+          <!-- ACCORDION 1 -->
           <button class="accordion">1. Información y consentimiento.</button>
           <div class="panel">
             <p>
@@ -78,7 +82,7 @@
               Web”) sean tratados por MANGUCA S.L.
             </p>
           </div>
-
+          <!-- ACCORDION 2 -->
           <button class="accordion">
             2. Obligatoriedad de facilitar los datos.
           </button>
@@ -100,7 +104,7 @@
               </li>
             </ul>
           </div>
-
+          <!-- ACCORDION 3 -->
           <button class="accordion">
             3. ¿Qué datos del usuario se tratarán?
           </button>
@@ -122,6 +126,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 4 -->
           <button class="accordion">
             4. ¿Cuál es la legitimación del tratamiento de los datos del
             usuario?
@@ -137,6 +142,7 @@
               Usuario podrá revocar solo uno de ellos no afectando a los demás.
             </p>
           </div>
+          <!-- ACCORDION 5 -->
           <button class="accordion">
             5. ¿A qué destinatarios se comunicarán los datos del usuario?
           </button>
@@ -146,6 +152,7 @@
               salvo obligación legal.
             </p>
           </div>
+          <!-- ACCORDION 5 -->
           <button class="accordion">
             6. Responsibilidad del usuario.
           </button>
@@ -170,6 +177,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 7 -->
           <button class="accordion">
             7. Comunicaciones promocionales y comerciales.
           </button>
@@ -189,6 +197,7 @@
               >
             </p>
           </div>
+          <!-- ACCORDION 8 -->
           <button class="accordion">
             8. Medidas de seguridad.
           </button>
@@ -211,6 +220,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -235,6 +245,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
