--- a/informacion/footer/voluntariado.html
+++ b/informacion/footer/voluntariado.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -55,19 +54,24 @@
     </header>
     <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="./voluntariado.html">Voluntariado</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Voluntariado</span>
           </div>
         </div>
         <div class="content">
+          <!-- VOLUNTEER INFO -->
           <article class="style">
             <h1>
               Información
@@ -105,6 +109,7 @@
               </li>
             </ul>
           </article>
+          <!-- INSCRIPTION -->
           <article class="style">
             <h1>
               Inscripción
@@ -125,6 +130,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -149,6 +155,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
