--- a/localizacion/localizacion.html
+++ b/localizacion/localizacion.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -44,7 +43,6 @@
                 </div>
               </div>
             </li>
-
             <li><a href="../horarios/horarios.html">Horarios</a></li>
             <li><a href="./localizacion.html">Localización</a></li>
             <li><a href="../entradas/inscripcion.html">Entradas</a></li>
@@ -53,19 +51,24 @@
       </div>
     </header>
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./localizacion.html">Localización</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Localización</span>
           </div>
         </div>
         <div class="content">
+          <!-- LOCATION INFO -->
           <article class="style">
             <h1>
               Información del recinto
@@ -85,6 +88,7 @@
               emblemático con unas vistas panorámicas únicas.
             </p>
           </article>
+          <!-- INFO TRANSPORTATION -->
           <article class="style">
             <h1>
               Medios de transporte disponibles
@@ -100,6 +104,7 @@
               </li>
             </ul>
           </article>
+          <!-- MAP -->
           <article class="style">
             <h1>
               Mapa del recinto
@@ -116,6 +121,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -144,6 +150,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
