--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Fuente Roboto -->
+    <!-- Font Roboto -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto"
       rel="stylesheet"
@@ -14,10 +14,8 @@
     <link rel="stylesheet" href="./css/index.css" />
     <title>MANGUCA</title>
   </head>
-
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
@@ -31,7 +29,6 @@
             <i></i>
             <i></i>
           </div>
-
           <ul id="nav-lists">
             <li class="close"><span onclick="Hide()">×</span></li>
             <li>
@@ -54,16 +51,18 @@
         </div>
       </div>
     </header>
+    <!-- MAIN -->
     <main>
+      <!-- BUTTON TOP -->
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
       <div>
         <img id="banner" src="./images/index/banner2.jpg" alt="Banner inicio" />
       </div>
       <div class="main">
         <div class="content">
+          <!-- LAST CONFIRMATIONS -->
           <div class="section">
-            <!--confirmaciones-->
             <div class="title">
-              <!--texto-->
               <h1>Últimas confirmaciones</h1>
             </div>
             <div class="artists">
@@ -83,7 +82,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="artist">
                 <a href="./informacion/invitados/poltattoo.html">
                   <img
@@ -103,14 +101,15 @@
               </div>
             </div>
           </div>
+          <!-- GET TICKET -->
           <div class="banner ">
             <a href="./entradas/inscripcion.html"
               ><h1>¡Consigue ya tu entrada!</h1></a
             >
           </div>
+          <!-- COMPETITION -->
           <div class="section">
             <div class="title">
-              <!--texto-->
               <h1>Concursos</h1>
             </div>
             <div class="artists">
@@ -130,7 +129,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="artist">
                 <a href="./informacion/concursos.html">
                   <img
@@ -150,13 +148,13 @@
               </div>
             </div>
           </div>
+          <!-- LOCATION INFO -->
           <div class="banner" id="banner2">
             <div>
               <h1>
                 Estamos en:
               </h1>
             </div>
-
             <div class="column2">
               <h3>Complejo Deportivo</h3>
               <span> Universidad de Cádiz </span><br />
@@ -169,9 +167,9 @@
             </div>
           </div>
         </div>
+        <!-- NEWS -->
         <aside class="news">
           <div class="title">
-            <!--texto-->
             <h1>Noticias</h1>
           </div>
           <div class="newsbox">
@@ -215,6 +213,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -243,6 +242,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img class="iconos" src="./images/iconos/rss.png" alt="Icono RSS" />
