--- a/informacion/footer/torneos.html
+++ b/informacion/footer/torneos.html
@@ -15,7 +15,6 @@
     <title>MANGUCA</title>
   </head>
   <body>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <!-- NAVBAR -->
     <header>
       <div class="container">
@@ -56,18 +55,21 @@
     <!-- MAIN -->
     <main>
       <div class="main">
+        <!-- BREADCRUMB -->
         <div class="breadcrumb">
           <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="./torneos.html">Torneos</a></li>
           </ul>
         </div>
+        <!-- BANNER -->
         <div class="titleBox">
           <div id="title">
             <span>Torneos</span>
           </div>
         </div>
         <div class="content">
+          <!-- ACCORDION 1 -->
           <button class="accordion">
             1. Inscripción
           </button>
@@ -95,6 +97,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 2 -->
           <button class="accordion">
             2. Normas generales
           </button>
@@ -139,6 +142,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 3 -->
           <button class="accordion">
             3. Normas específicas para Tekken
           </button>
@@ -172,6 +176,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 4 -->
           <button class="accordion">
             4. Normas específicas para Super Smash Bros
           </button>
@@ -196,6 +201,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 5 -->
           <button class="accordion">
             5. Normas específicas para FIFA
           </button>
@@ -224,6 +230,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 6 -->
           <button class="accordion">
             6. Normas específicas para YuGiOh
           </button>
@@ -245,6 +252,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 7 -->
           <button class="accordion">
             7. Normas específicas para Magic
           </button>
@@ -278,6 +286,7 @@
               </li>
             </ul>
           </div>
+          <!-- ACCORDION 8 -->
           <button class="accordion">
             8. Normas específicas de LOL
           </button>
@@ -317,6 +326,7 @@
     <!-- FOOTER -->
     <footer>
       <div class="footer">
+        <!-- FOOTER INFO -->
         <div class="about">
           <div class="colabout">
             <div>
@@ -341,6 +351,7 @@
             </div>
           </div>
         </div>
+        <!-- SOCIAL NETWORK -->
         <div class="contacto">
           <div class="contactos">
             <img
