--- a/informacion/invitados/meowri.html
+++ b/informacion/invitados/meowri.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
-    <!-- HEADER -->
+    <!-- NAVBAR -->
     <header>
       <div class="container">
         <div class="logo">
